--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="1x"
+        android:text="1.00x"
         android:textColor="#FF920D"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +40,30 @@
         android:layout_marginTop="16dp"
         android:src="@drawable/ic_minus" />
 
+    <com.example.custom_dialog_speed_up.CustomViewProgressSpeedUp
+        android:id="@+id/progress_bar"
+        android:layout_width="0dp"
+        android:layout_height="11dp"
+        app:layout_constraintTop_toTopOf="@id/btn_minus"
+        app:layout_constraintBottom_toBottomOf="@id/btn_minus"
+        app:layout_constraintStart_toEndOf="@id/btn_minus"
+        app:layout_constraintEnd_toStartOf="@id/btn_plus"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="5dp"/>
+
+    <com.example.custom_dialog_speed_up.CustomViewSpeedUpController
+        android:id="@+id/progress_bar_controller"
+        android:layout_width="0dp"
+        android:layout_height="18dp"
+        app:layout_constraintTop_toTopOf="@id/btn_minus"
+        android:layout_marginHorizontal="4dp"
+        android:translationY="3dp"
+        android:translationX="-1dp"
+        app:layout_constraintStart_toEndOf="@id/btn_minus"
+        app:layout_constraintEnd_toStartOf="@id/btn_plus"
+        />
+
+
     <ImageView
         android:id="@+id/btn_plus"
         android:layout_width="wrap_content"
@@ -48,5 +72,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="24dp"
         android:src="@drawable/ic_plus" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0.25"
+        android:textColor="#FCFCFC"
+        android:layout_marginTop="6dp"
+        android:layout_marginStart="4dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_minus"
+        app:layout_constraintStart_toEndOf="@id/btn_minus"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="4"
+        android:textColor="#FCFCFC"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_minus"
+        app:layout_constraintEnd_toStartOf="@id/btn_plus"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
